--- a/Audio-Detox/Audio-04.html
+++ b/Audio-Detox/Audio-04.html
@@ -119,7 +119,7 @@
     <!-- Cole o link do Seu áudio Abaixo-->
     <audio class="plyr" src="https://s3.fr-par.scw.cloud/typebot/public/typebots/clkxabkvi001mmk0f9iycbhy0/blocks/nh553fln0ll2g7hyv1gssowg?v=1691364764140"></audio>
     <!-- Cole o link da Sua imagem Abaixo-->
-    <img src="https://postimg.cc/MMSp0f3R/9a1a3165" alt="Imagem">
+    <img src="https://i.postimg.cc/85FfShhy/Design-sem-nome-5.png" alt="Imagem">
     <div class="microphone-icon">
       <i class="fas fa-microphone"></i>
     </div>
